Make magnifiers respond to native Views focus change events

Make the focus manager notify the focus manager delegate with
focus changed events, and make the ash focus manager delegate
center the viewport of the currently enabled magnifier (if any)
around the center of the focused view.

BUG=833345

Change-Id: Ifc047e761bc24b58029545113a3a5ab6dbf01ef6
Reviewed-on: https://chromium-review.googlesource.com/1014680
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552533}
Former-commit-id: aabb73a1a1a00cc3af265a643fc1aa883e1e63df