ash/magnifier/magnifier_test_utils.h
@@ -6,12 +6,14 @@
 #define ASH_MAGNIFIER_MAGNIFIER_TEST_UTILS_H_
 
 #include "base/macros.h"
+#include "ui/gfx/geometry/size.h"
 
 namespace aura {
 class Window;
 }  // namespace aura
 
 namespace gfx {
+class Point;
 class Rect;
 }  // namespace gfx
 
@@ -21,7 +23,37 @@ class InputMethod;
 
 namespace ash {
 
+class TestFocusView;
 class TestTextInputView;
+
+// Defines a test helper for magnifiers unit tests that wants to verify their
+// behaviors in response to focus change events.
+class MagnifierFocusTestHelper {
+ public:
+  MagnifierFocusTestHelper() = default;
+  ~MagnifierFocusTestHelper() = default;
+
+  static constexpr int kButtonHeight = 20;
+  static constexpr gfx::Size kTestFocusViewSize{300, 200};
+
+  // Creates a view at |location| in the primary root window with size =
+  // |kTestFocusViewSize|. The view has two buttons, the first is positioned at
+  // the top of the view and the second at the bottom of the view. Both bottons
+  // have width = the width of |kTestFocusViewSize|, and height =
+  // |kButtonHeight|.
+  void CreateAndShowFocusTestView(const gfx::Point& location);
+
+  void FocusFirstButton();
+  void FocusSecondButton();
+
+  gfx::Rect GetFirstButtonBoundsInRoot() const;
+  gfx::Rect GetSecondButtonBoundsInRoot() const;
+
+ private:
+  TestFocusView* focus_test_view_ = nullptr;
+
+  DISALLOW_COPY_AND_ASSIGN(MagnifierFocusTestHelper);
+};
 
 // Defines a test helper for magnifiers unit tests that wants to verify their
 // behaviors in response to text fields input and focus events.
